--- a/videos-hub.html
+++ b/videos-hub.html
@@ -49,6 +49,8 @@
 
   <div class="wrapper2">
     <div class="videopagewrapper">
+        <a href="video-pages/videos-31"> <img
+          src="https://vz-88bb4920-5e6.b-cdn.net/0b731f03-90f3-4574-a3c3-3fbdc27280dc/thumbnail.jpg"></a> 
         <a href="video-pages/videos-30"> <img
           src="https://vz-88bb4920-5e6.b-cdn.net/10c09648-8208-4f5b-a632-faa2650c4318/thumbnail.jpg"></a>      
         <a href="video-pages/videos-29"> <img
