Stream VOD and copyright change

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   
   <div class="img-banner"></div>
   <div class="footer">
-    <footer>© T h e D o c t o r 2022 </footer>
+    <footer>&copy; T h e D o c t o r 2022 </footer>
   </div>
 </body>
 
