--- a/socials.html
+++ b/socials.html
@@ -67,7 +67,7 @@
   </div>
   <div class="img-banner"></div>
   <div class="footer">
-    <footer>© T h e D o c t o r 2022 </footer>
+    <footer>&copy; T h e D o c t o r 2022 </footer>
   </div>
 </body>
 
