--- a/video-pages/videos-5.html
+++ b/video-pages/videos-5.html
@@ -48,7 +48,7 @@
     </div>
   </div>
   <div class="footer">
-    <footer>© T h e D o c t o r 2022 </footer>
+    <footer>&copy; T h e D o c t o r 2022 </footer>
   </div>
 </body>
 
