--- a/videos-hub.html
+++ b/videos-hub.html
@@ -49,6 +49,8 @@
 
   <div class="wrapper2">
     <div class="videopagewrapper">
+        <a href="video-pages/videos-32"> <img
+          src="https://vz-88bb4920-5e6.b-cdn.net/5a688bca-f13c-4fdc-aa92-428ce1abe011/thumbnail.jpg"></a>
         <a href="video-pages/videos-31"> <img
           src="https://vz-88bb4920-5e6.b-cdn.net/0b731f03-90f3-4574-a3c3-3fbdc27280dc/thumbnail.jpg"></a> 
         <a href="video-pages/videos-30"> <img
@@ -116,7 +118,7 @@
     </div>
   </div>
   <div class="footer">
-    <footer>© T h e D o c t o r 2022 </footer>
+    <footer>&copy; T h e D o c t o r 2022 </footer>
   </div>
 </body>
 
