--- a/socials.html
+++ b/socials.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html5>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Minecraft Server</title>
-  <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
-  <script src="script.js" defer></script>
+  <title>TheTimeVortex</title>
+  <link rel="shortcut icon" type="image/x-icon" href="path/to/WebsiteLogo.ico">
+  <script src="script.js" async></script>
   <meta property="og:type" content="website">
   <meta property="og:title" content="TheTimeVortex" />
   <meta property="og:description"
     content="TheDoctor's website which includes his discord server, youtube, twitch and more." />
-  <meta property="og:url" content="https://www.thetimevortex.xyz" />
+  <meta property="og:url" content="https://www.thetimevortex.net" />
   <meta property="og:image"
     content="https://cdn.discordapp.com/attachments/824742183415316571/1040475479616000010/The_Time_Vortex_Logo.png" />
 </head>
