--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
     content="https://cdn.discordapp.com/attachments/824742183415316571/1040475479616000010/The_Time_Vortex_Logo.png" />
 </head>
 
+import React from 'react';
+import Header from './Header';
+
+const Home = () => {
+  return (
+    <div>
+      <Header />
+      <h1>Welcome to the Homepage</h1>
+    </div>
+  );
+};
+
+
 <body>
   <?php include 'header.php'; ?>
   <div class="wrapper">
