--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
   <meta property="og:url" content="https://www.thetimevortex.net" />
   <meta property="og:image"
     content="https://cdn.discordapp.com/attachments/824742183415316571/1040475479616000010/The_Time_Vortex_Logo.png" />
+  <script>
+    import React from 'react';
+import Header from './Header';
+
+const Home = () => {
+  return (
+    <div>
+      <Header />
+      <h1>Welcome to the Homepage</h1>
+    </div>
+  );
+};
+  </script>
 </head>
 
 import React from 'react';
