--- a/index.html
+++ b/index.html
@@ -17,16 +17,14 @@
     content="https://cdn.discordapp.com/attachments/824742183415316571/1040475479616000010/The_Time_Vortex_Logo.png" />
   <script>
     import React from 'react';
-import Header from './Header';
+    import Header from 'Header.js';
 
-const Home = () => {
-  return (
-    <div>
-      <Header />
-      <h1>Welcome to the Homepage</h1>
-    </div>
-  );
-};
+    const Home = () => {
+        Header
+      return (
+    
+      );
+    };
   </script>
 </head>
 
