--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
   <meta property="og:url" content="https://www.thetimevortex.net" />
   <meta property="og:image"
     content="https://cdn.discordapp.com/attachments/824742183415316571/1040475479616000010/The_Time_Vortex_Logo.png" />
-    <script type=module src=header.js></script>
+  <script type=module src=assets/header.js></script>
 </head>
 
-<my-header></my-header>
-
 <body>
+  <my-header></my-header>
   <div class="wrapper">
     <p1> This is a place to find all my links, ranging <br>
       from my Youtube, Twitch and even my Discord server. </p1>
