--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <meta property="og:image"
     content="https://cdn.discordapp.com/attachments/824742183415316571/1040475479616000010/The_Time_Vortex_Logo.png" />
   <script type=module src=assets/header.js></script>
+  <script type=module src=assets/footer.js></script>
 </head>
 
 <body>
