--- a/socials.html
+++ b/socials.html
@@ -15,38 +15,12 @@
   <meta property="og:url" content="https://www.thetimevortex.net" />
   <meta property="og:image"
     content="https://cdn.discordapp.com/attachments/824742183415316571/1040475479616000010/The_Time_Vortex_Logo.png" />
+  <script type=module src=assets/header.js></script>
+  <script type=module src=assets/footer.js></script>
 </head>
 
-<Header>
-  <div class="Header">
-    <h1>Socials</h1>
-    <nav class="navbar">
-      <ul class="navbar-links">
-        <li> <a href="index"> Home </a></li>
-        <li> <a href="https://youtube.com/thedoctor121027" target="_blank"> Youtube </a></li>
-        <li> <a href="https://twitch.tv/ttv_thedoctor" target="_blank"> Twitch </a></li>
-        <li class="more-links"> <a href="#"> More </a>
-          <ul>
-            <li> <a href="https://twitter.com/TheDoctorTTV" target="_blank"> Twitter </a></li>
-            <li> <a href="videos-hub"> Stream VODs Hub </a></li>
-            <li> <a href="minecraft-server"> Minecraft Server </a></li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
-  </div>
-  <div class="mobile_nav">
-    <ul>
-      <li> <a href="index"> <img class="icons" src="icons/home-icon.svg" alt=""> </a></li>
-      <li> <a href="socials"> <img class="icons" src="icons/socials.svg" alt=""> </a></li>
-      <li> <a href="videos-hub"> <img class="icons" src="icons/tv-outline.svg" alt=""> </a> </li>
-      <li> <a href="minecraft-server"> <img class="icons" src="icons/minecraft.svg" alt=""> </a></li>
-    </ul>
-  </div>
-</Header>
-
 <body>
-
+  <my-header></my-header>
   <div class="wrapper">
     <p1>Here you can see my Youtube, Twitch and Twitter.</p1>
     <br>
@@ -65,9 +39,7 @@
     </p1>
   </div>
   <div class="img-banner"></div>
-  <div class="footer">
-    <footer>&copy; T h e D o c t o r 2022 </footer>
-  </div>
+  <my-footer></my-footer>
 </body>
 
 </html>
