--- a/video-pages/videos-4.html
+++ b/video-pages/videos-4.html
@@ -9,46 +9,18 @@
     <title>Stream VODs</title>
     <link rel="stylesheet" href="/style.css">
     <script src="/script.js" defer></script>
+    <script type=module src=assets/header.js></script>
+    <script type=module src=assets/footer.js></script>
   </head>
 
-<Header>
-  <div class="Header">
-    <h1>Stream VOD</h1>
-    <nav class="navbar">
-      <ul class="navbar-links">
-        <li> <a href="/index"> Home </a></li>
-        <li> <a href="https://youtube.com/thedoctor121027" target="_blank"> Youtube </a></li>
-        <li> <a href="https://twitch.tv/ttv_thedoctor" target="_blank"> Twitch </a></li>
-        <li class="more-links"> <a href="#"> More </a>
-          <ul>
-            <li> <a href="https://twitter.com/TheDoctorTTV" target="_blank"> Twitter </a></li>
-            <li> <a href="/videos-hub"> Stream VODs Hub </a></li>
-            <li> <a href="/minecraft-server"> Minecraft Server </a></li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
-  </div>
-  <div class="mobile_nav">
-    <ul>
-      <li> <a href="/index"> <img class="icons" src="\icons/home-icon.svg" alt=""> </a></li>
-      <li> <a href="/socials"> <img class="icons" src="\icons/socials.svg" alt=""> </a></li>
-      <li> <a href="/videos-hub"> <img class="icons" src="\icons/tv-outline.svg" alt=""> </a> </li>
-      <li> <a href="/minecraft-server"> <img class="icons" src="\icons/minecraft.svg" alt=""> </a></li>
-    </ul>
-  </div>
-</Header>
-
 <body>
-
+  <my-header></my-header>
   <div class="wrapper2">
     <div class="videopage">
       <iframe src="https://iframe.mediadelivery.net/embed/72943/aa9cf2cc-2f08-47ae-9df6-cbbf96167d9a?autoplay=false&preload=false" loading="lazy" style="border: none;" allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;" allowfullscreen="true"></iframe>
     </div>
   </div>
-  <div class="footer">
-    <footer>&copy; T h e D o c t o r 2022 </footer>
-  </div>
+  <my-footer></my-footer>
 </body>
 
 </html>
