--- a/video-pages/videos-1.html
+++ b/video-pages/videos-1.html
@@ -9,8 +9,8 @@
   <title>Stream VODs</title>
   <link rel="stylesheet" href="/style.css">
   <script src="/script.js" defer></script>
-  <script type=module src=assets/header.js></script>
-  <script type=module src=assets/footer.js></script>
+  <script type=module src=/assets/header.js></script>
+  <script type=module src=/assets/footer.js></script>
 </head>
 
 <body>
