--- a/video-pages/videos-24.html
+++ b/video-pages/videos-24.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
-    <title>Stream VODs</title>
-    <link rel="stylesheet" href="/style.css">
-    <script src="/script.js" defer></script>
-    <script type=module src=assets/header.js></script>
-    <script type=module src=assets/footer.js></script>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
+  <title>Stream VODs</title>
+  <link rel="stylesheet" href="/style.css">
+  <script src="/script.js" defer></script>
+  <script type=module src=/assets/header.js></script>
+  <script type=module src=/assets/footer.js></script>
+</head>
 
 <body>
   <my-header></my-header>
