--- a/videos-hub.html
+++ b/videos-hub.html
@@ -23,6 +23,8 @@
   <my-header></my-header>
   <div class="wrapper2">
     <div class="videopagewrapper">
+        <a href="video-pages/videos-33"> <img
+          src="https://vz-88bb4920-5e6.b-cdn.net/944f6860-66df-44e0-9f1f-fc09200ef1d9/thumbnail.jpg"></a>
         <a href="video-pages/videos-32"> <img
           src="https://vz-88bb4920-5e6.b-cdn.net/5a688bca-f13c-4fdc-aa92-428ce1abe011/thumbnail.jpg"></a>
         <a href="video-pages/videos-31"> <img
