New Buttons for the Mobile site

--- a/socials.html
+++ b/socials.html
@@ -25,15 +25,15 @@
     <p1>Here you can see my Youtube, Twitch and Twitter.</p1>
     <br>
     <br>
-    <a href="https://youtube.com/@thedoctorttv" target="_blank">
+    <a class="cool-button" href="https://youtube.com/@thedoctorttv" target="_blank">
       <button>TheDoctor's Youtube Channel</button>
     </a>
     <br>
-    <a href="https://twitch.tv/ttv_thedoctor" target="_blank">
+    <a class="cool-button" href="https://twitch.tv/ttv_thedoctor" target="_blank">
       <button>TheDoctor's Twitch Channel</button>
     </a>
     <br>
-    <a href="https://twitter.com/thedoctorttv" target="_blank">
+    <a class="cool-button" href="https://twitter.com/thedoctorttv" target="_blank">
       <button>TheDoctor's Twitter</button>
     </a>
     </p1>
