--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <my-header></my-header>
   <div class="wrapper">
-    <p1> This is a place to find all my links, ranging <br>
+    <p1 class="index-text"> This is a place to find all my links, ranging <br>
       from my Youtube, Twitch and even my Discord server. </p1>
     <br>
     <iframe src="https://discord.com/widget?id=691428243877789726&theme=dark" width="350" height="500"></iframe>
