--- a/minecraft-server.html
+++ b/minecraft-server.html
@@ -23,10 +23,10 @@
 <body>
   <my-header></my-header>
   <div class="wrapper">
-    <p1> You can join the official time vortex minecraft server.</p1>
+    <p1 class="mc-server-text"> You can join the official time vortex minecraft server.</p1>
     <br>
     <br>
-    <p1>The Server is compatible with both Java and Bedrock.
+    <p1 class="mc-server-text">The Server is compatible with both Java and Bedrock.
       <br>
       <br> To join on console, join the discord server,
       <br>
@@ -35,7 +35,7 @@
       <br> minecraft channel and check pinned messages
     </p1>
     <br>
-    <p2> IP Address : mc.thetimevortex.xyz </p2>
+    <p2 class="mc-server-text"> IP Address : mc.thetimevortex.xyz </p2>
   </div>
   <div class="img-banner"></div>
   <my-footer></my-footer>
