--- a/minecraft-server.html
+++ b/minecraft-server.html
@@ -22,7 +22,7 @@
 
 <body>
   <my-header></my-header>
-  <div class="wrapper">
+  <div class="mcpage">
     <p1 class="mc-server-text"> You can join the official time vortex minecraft server.</p1>
     <br>
     <br>
