--- a/socials.html
+++ b/socials.html
@@ -21,7 +21,7 @@
 
 <body>
   <my-header></my-header>
-  <div class="wrapper">
+  <div class="socials">
     <p1 class="social-text">TheDoctor's Social Links.</p1>
     <br>
     <br>
