--- a/videos-hub.html
+++ b/videos-hub.html
@@ -21,7 +21,7 @@
 
 <body>
   <my-header></my-header>
-  <div class="wrapper2">
+  <div class="videohub">
     <div class="videopagewrapper">
         <a href="video-pages/videos-33"> <img
           src="https://vz-88bb4920-5e6.b-cdn.net/944f6860-66df-44e0-9f1f-fc09200ef1d9/thumbnail.jpg"></a>
