Icon fix 2nd try

--- a/socials.html
+++ b/socials.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>TheTimeVortex</title>
-  <link rel="shortcut icon" type="image/x-icon" href="TheTimeVortex-Website/icons/WebsiteLogo.ico">
-  <script src="script.js" async></script>
+  <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
   <meta property="og:type" content="website">
   <meta property="og:title" content="TheTimeVortex" />
   <meta property="og:description"
