--- a/video-pages/videos-21.html
+++ b/video-pages/videos-21.html
@@ -8,15 +8,19 @@
   <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
   <title>Stream VODs</title>
   <link rel="stylesheet" href="/style.css">
-  <script src="/script.js" defer></script>
   <script type=module src=/assets/header.js></script>
   <script type=module src=/assets/footer.js></script>
 </head>
+
 <body>
   <my-header></my-header>
   <div class="wrapper2">
     <div class="videopage">
-      <iframe src="https://iframe.mediadelivery.net/embed/72943/975d5549-91b6-4a86-94ae-55477bab1f05?autoplay=false&preload=false" loading="lazy" style="border: none;" allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;" allowfullscreen="true"></iframe>
+      <iframe
+        src="https://iframe.mediadelivery.net/embed/72943/975d5549-91b6-4a86-94ae-55477bab1f05?autoplay=false&preload=false"
+        loading="lazy" style="border: none;"
+        allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+        allowfullscreen="true"></iframe>
     </div>
   </div>
   <my-footer></my-footer>
