--- a/video-pages/videos-23.html
+++ b/video-pages/videos-23.html
@@ -8,7 +8,6 @@
   <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
   <title>Stream VODs</title>
   <link rel="stylesheet" href="/style.css">
-  <script src="/script.js" defer></script>
   <script type=module src=/assets/header.js></script>
   <script type=module src=/assets/footer.js></script>
 </head>
@@ -17,7 +16,11 @@
   <my-header></my-header>
   <div class="wrapper2">
     <div class="videopage">
-      <iframe src="https://iframe.mediadelivery.net/embed/72943/6537f4e0-f45f-4eaa-9c32-f4fc62d2c1e7?autoplay=false&preload=false" loading="lazy" style="border: none;" allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;" allowfullscreen="true"></iframe>
+      <iframe
+        src="https://iframe.mediadelivery.net/embed/72943/6537f4e0-f45f-4eaa-9c32-f4fc62d2c1e7?autoplay=false&preload=false"
+        loading="lazy" style="border: none;"
+        allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+        allowfullscreen="true"></iframe>
     </div>
   </div>
   <my-footer></my-footer>
