Removed Stream VODs

--- a/videos-hub.html
+++ b/videos-hub.html
@@ -21,6 +21,12 @@
 <body>
   <my-header></my-header>
   <div class="videohub">
+    <p class="stream-vod-title">
+        Welcome to TheDoctor's Stream VODs Archive
+    </p>
+    <p class="vod-description">
+        Here you will find a few of TheDoctor's VODs from Twitch.
+    </p>
     <div class="videopagewrapper">
       <a href="video-pages/videos-33"> <img
           src="https://vz-88bb4920-5e6.b-cdn.net/944f6860-66df-44e0-9f1f-fc09200ef1d9/thumbnail.jpg"></a>
@@ -54,40 +60,14 @@
           src="https://vz-88bb4920-5e6.b-cdn.net/22a3a745-305c-40c9-b1e1-191c66f43e20/thumbnail.jpg"></a>
       <a href="video-pages/videos-18"> <img
           src="https://vz-88bb4920-5e6.b-cdn.net/322f71b2-fd10-4818-9a27-ae630d108f6d/thumbnail_a1e8fa42.jpg"></a>
-      <a href="video-pages/videos-17"> <img
-          src="https://vz-88bb4920-5e6.b-cdn.net/34e3813a-0dff-4e7c-9639-ce29a233d4fc/thumbnail.jpg"></a>
       <a href="video-pages/videos-16"> <img
           src="https://vz-88bb4920-5e6.b-cdn.net/58b618b9-f771-4652-8807-38cde5aab533/thumbnail_f126bfdf.jpg"></a>
       <a href="video-pages/videos-15"> <img
           src="https://vz-88bb4920-5e6.b-cdn.net/0f7ccf9d-d543-46eb-95bd-4f05f7ce71ef/thumbnail_efabf211.jpg"></a>
       <a href="video-pages/videos-1"> <img
           src="https://vz-88bb4920-5e6.b-cdn.net/49f9e085-6824-45f8-96e5-a870c3a8d414/thumbnail.jpg"></a>
-      <a href="video-pages/videos-2"> <img
-          src="https://vz-88bb4920-5e6.b-cdn.net/fd28a168-6688-4d46-b6c1-7dd03fede59d/thumbnail_dd7b07fa.jpg"></a>
-      <a href="video-pages/videos-3"> <img
-          src="https://vz-88bb4920-5e6.b-cdn.net/170a6577-cbbb-4520-acbf-6814934a5c25/thumbnail.jpg"></a>
-      <a href="video-pages/videos-4"> <img
-          src="https://vz-88bb4920-5e6.b-cdn.net/aa9cf2cc-2f08-47ae-9df6-cbbf96167d9a/thumbnail_0b7a3812.jpg"></a>
       <a href="video-pages/videos-5"> <img
           src="https://vz-88bb4920-5e6.b-cdn.net/7932abb2-e5c1-41c7-9025-992ac43b8546/thumbnail_f8513d06.jpg"></a>
-      <a href="video-pages/videos-6"> <img
-          src="https://vz-88bb4920-5e6.b-cdn.net/88fd419d-659c-4703-883e-b5300602831d/thumbnail_48ac1af4.jpg"></a>
-      <a href="video-pages/videos-7"> <img
-          src="https://vz-88bb4920-5e6.b-cdn.net/d2686d8d-9bfc-44ae-9ac0-4ca001d13962/thumbnail.jpg"></a>
-      <a href="video-pages/videos-8"> <img
-          src="https://vz-88bb4920-5e6.b-cdn.net/ed11db50-696d-4d28-a9ff-6ebf8b7a3198/thumbnail.jpg"></a>
-      <a href="video-pages/videos-9"> <img
-          src="https://vz-88bb4920-5e6.b-cdn.net/febc9b82-a785-4bae-b5d6-430bc542941a/thumbnail_9cf52986.jpg"></a>
-      <a href="video-pages/videos-10"> <img
-          src="https://vz-88bb4920-5e6.b-cdn.net/e5d0b82d-8a82-486f-b6c1-1ecb94231c62/thumbnail_802c0faf.jpg"></a>
-      <a href="video-pages/videos-11"> <img
-          src="https://vz-88bb4920-5e6.b-cdn.net/05a11cdb-621c-4348-960a-99340253df27/thumbnail_9464407d.jpg"></a>
-      <a href="video-pages/videos-12"> <img
-          src="https://vz-88bb4920-5e6.b-cdn.net/8694c70d-7064-4432-ad3e-87780c2aaf6e/thumbnail.jpg"></a>
-      <a href="video-pages/videos-13"> <img
-          src="https://vz-88bb4920-5e6.b-cdn.net/b874a7dc-9d78-4e13-aa5d-d6a092fcb736/thumbnail.jpg"></a>
-      <a href="video-pages/videos-14"> <img
-          src="https://vz-88bb4920-5e6.b-cdn.net/fedbffd4-c38d-4a11-8dc2-34e883a1f6de/thumbnail.jpg"></a>
 
       </p1>
     </div>
