Major CSS Update v2

--- a/videos-hub.html
+++ b/videos-hub.html
@@ -20,7 +20,7 @@
 
 <body>
     <my-header></my-header>
-    <div class="videohub">
+    <div class="videohub bg-accent">
         <p class="stream-vod-title">
             Welcome to TheDoctor's Stream VODs Archive
         </p>
