--- a/socials.html
+++ b/socials.html
@@ -20,7 +20,7 @@
 
 <body>
   <my-header></my-header>
-  <div class="socials">
+  <div class="socials bg-accent">
     <p1 class="social-text">TheDoctor's Social Links.</p1>
     <br>
     <br>
