--- a/minecraft-server.html
+++ b/minecraft-server.html
@@ -77,7 +77,7 @@
       Bedrock Console Version:
       <br>
       <br>
-      1. Download the MC Server Connector app on your console.
+      1. Download the MC Server Connector app on your phone or tablet/ipad.
       <br>
       Here is the <a href="https://play.google.com/store/apps/details?id=com.smokiem.mcserverconnector&gl=US" target="_blank">Android</a> link.
       <br>
