--- a/socials.html
+++ b/socials.html
@@ -20,29 +20,33 @@
 
 <body>
   <my-header></my-header>
-  <div class="socials bg-accent">
-    <p1 class="social-text">TheDoctor's Social Links.</p1>
-    <br>
-    <br>
-    <a class="cool-button" href="https://youtube.com/@thedoctorttv" target="_blank">
-      <button>Youtube Channel</button>
-    </a>
-    <br>
-    <a class="cool-button" href="https://twitch.tv/ttv_thedoctor" target="_blank">
-      <button>Twitch Channel</button>
-    </a>
-    <br>
-    <a class="cool-button" href="https://twitter.com/thedoctorttv" target="_blank">
-      <button>Twitter</button>
-    </a>
-    <a class="cool-button" href="https://github.com/TheDoctor121027" target="_blank">
-      <button>Github</button>
-    </a>
-    <a class="cool-button" href="https://vrchat.com/home/user/usr_c91b107f-da91-4366-af50-bcc3b30e9175" target="_blank">
-      <button>VRChat</button>
-    </a>
-    </p1>
+  <div class="bg-container">
+    <div class="socials bg-accent">
+      <p1 class="social-text">TheDoctor's Social Links.</p1>
+      <br>
+      <br>
+      <a class="cool-button" href="https://youtube.com/@thedoctorttv" target="_blank">
+        <button>Youtube Channel</button>
+      </a>
+      <br>
+      <a class="cool-button" href="https://twitch.tv/ttv_thedoctor" target="_blank">
+        <button>Twitch Channel</button>
+      </a>
+      <br>
+      <a class="cool-button" href="https://twitter.com/thedoctorttv" target="_blank">
+        <button>Twitter</button>
+      </a>
+      <a class="cool-button" href="https://github.com/TheDoctor121027" target="_blank">
+        <button>Github</button>
+      </a>
+      <a class="cool-button" href="https://vrchat.com/home/user/usr_c91b107f-da91-4366-af50-bcc3b30e9175"
+        target="_blank">
+        <button>VRChat</button>
+      </a>
+      </p1>
+    </div>
   </div>
+
   <div class="img-banner"></div>
   <my-footer></my-footer>
 </body>
