--- a/minecraft-server.html
+++ b/minecraft-server.html
@@ -21,83 +21,92 @@
 
 <body>
   <my-header></my-header>
-  <div class="mcpage bg-accent">
-    <p1 class="mc-server-text-1">Welcome to The Time Vortex Minecraft server! We are thrilled to have you as a part of
-      our
-      community. Our server is dedicated to providing players with a survival and creative experience like no other. You
-      may join using Bedrock and Java. Here, you can build, explore, and survive with other players from around the
-      world, all while immersing yourself in the world of Minecraft. With a friendly community and a focus on survival
-      and creative gameplay, you're sure to have an unforgettable experience on our server. To join us, simply enter the
-      server IP - mc.thetimevortex.xyz - into your Minecraft client and get ready to unleash your creativity and survival
-      skills! There might also be more gamemodes in the future.
-    </p1>
-    <p class="mc-server-text-2">
-      Joining The Time Vortex Minecraft server is easy, whether you're playing on the Java version or the Bedrock
-      version of the game. Here's a step-by-step guide on how to join the server:
-      <br>
-      <br>
-      Java Version:
-      <br>
-      <br>
-      1. Launch Minecraft Java Edition.
-      <br>
-      2. Click on the "Multiplayer" option from the main menu.
-      <br>
-      3. Click the "Add Server" button.
-      <br>
-      4. Give the server a name (e.g. "The Time Vortex").
-      <br>
-      5. Enter the server IP - mc.thetimevortex.xyz - into the "Server Name" field.
-      <br>
-      6. Click "Done".
-      <br>
-      7. Select the server from the server list and click "Join Server".
-      <br>
-      <br>
-      Bedrock Version:
-      <br>
-      <br>
-      1. Launch Minecraft Bedrock Edition.
-      <br>
-      2. Click on the "Play" button from the main menu.
-      <br>
-      3. Click on the "Servers" tab.
-      <br>
-      4. Click the "Add Server" button.
-      <br>
-      5. Give the server a name (e.g. "The Time Vortex").
-      <br>
-      6. Enter the server IP - mc.thetimevortex.xyz - into the "Server Name" field.
-      <br>
-      7. Click "Done".
-      <br>
-      8. Select the server from the server list and click "Join Server".
-      <br>
-      <br>
-      Bedrock Console Version:
-      <br>
-      <br>
-      1. Download the MC Server Connector app on your phone or tablet/ipad.
-      <br>
-      Here is the <a href="https://play.google.com/store/apps/details?id=com.smokiem.mcserverconnector&gl=US" target="_blank">Android</a> link.
-      <br>
-      Here is the <a href="https://apps.apple.com/us/app/mc-server-connector/id1548251304" target="_blank">IOS</a> link.
-      <br>
-      2. Launch the app.
-      <br>
-      3. Give the server a name (e.g. "The Time Vortex").
-      <br>
-      4. Enter the server IP - mc.thetimevortex.xyz - into the "Server Address" field.
-      <br>
-      5. Click "Start Server". The Server will be under the friends tab.
-      <br>
-      6. Select the server and Join.
-      <br>
-      <br>
-      And that's it! You should now be able to connect to The Time Vortex Minecraft server and start playing with other
-      players from around the world. Get started today and experience the thrill of playing on The Time Vortex server!
-    </p>
+  <div class="bg-container">
+    <div class="mcpage bg-accent">
+      <p1 class="mc-server-text-1">Welcome to The Time Vortex Minecraft server! We are thrilled to have you as a part of
+        our
+        community. Our server is dedicated to providing players with a survival and creative experience like no other.
+        You
+        may join using Bedrock and Java. Here, you can build, explore, and survive with other players from around the
+        world, all while immersing yourself in the world of Minecraft. With a friendly community and a focus on survival
+        and creative gameplay, you're sure to have an unforgettable experience on our server. To join us, simply enter
+        the
+        server IP - mc.thetimevortex.xyz - into your Minecraft client and get ready to unleash your creativity and
+        survival
+        skills! There might also be more gamemodes in the future.
+      </p1>
+      <p class="mc-server-text-2">
+        Joining The Time Vortex Minecraft server is easy, whether you're playing on the Java version or the Bedrock
+        version of the game. Here's a step-by-step guide on how to join the server:
+        <br>
+        <br>
+        Java Version:
+        <br>
+        <br>
+        1. Launch Minecraft Java Edition.
+        <br>
+        2. Click on the "Multiplayer" option from the main menu.
+        <br>
+        3. Click the "Add Server" button.
+        <br>
+        4. Give the server a name (e.g. "The Time Vortex").
+        <br>
+        5. Enter the server IP - mc.thetimevortex.xyz - into the "Server Name" field.
+        <br>
+        6. Click "Done".
+        <br>
+        7. Select the server from the server list and click "Join Server".
+        <br>
+        <br>
+        Bedrock Version:
+        <br>
+        <br>
+        1. Launch Minecraft Bedrock Edition.
+        <br>
+        2. Click on the "Play" button from the main menu.
+        <br>
+        3. Click on the "Servers" tab.
+        <br>
+        4. Click the "Add Server" button.
+        <br>
+        5. Give the server a name (e.g. "The Time Vortex").
+        <br>
+        6. Enter the server IP - mc.thetimevortex.xyz - into the "Server Name" field.
+        <br>
+        7. Click "Done".
+        <br>
+        8. Select the server from the server list and click "Join Server".
+        <br>
+        <br>
+        Bedrock Console Version:
+        <br>
+        <br>
+        1. Download the MC Server Connector app on your phone or tablet/ipad.
+        <br>
+        Here is the <a href="https://play.google.com/store/apps/details?id=com.smokiem.mcserverconnector&gl=US"
+          target="_blank">Android</a> link.
+        <br>
+        Here is the <a href="https://apps.apple.com/us/app/mc-server-connector/id1548251304" target="_blank">IOS</a>
+        link.
+        <br>
+        2. Launch the app.
+        <br>
+        3. Give the server a name (e.g. "The Time Vortex").
+        <br>
+        4. Enter the server IP - mc.thetimevortex.xyz - into the "Server Address" field.
+        <br>
+        5. Click "Start Server". The Server will be under the friends tab.
+        <br>
+        6. Select the server and Join.
+        <br>
+        <br>
+        And that's it! You should now be able to connect to The Time Vortex Minecraft server and start playing with
+        other
+        players from around the world. Get started today and experience the thrill of playing on The Time Vortex server!
+      </p>
+    </div>
   </div>
+
   <div class="img-banner"></div>
   <my-footer></my-footer>
 </body>
