--- a/minecraft-server.html
+++ b/minecraft-server.html
@@ -21,7 +21,7 @@
 
 <body>
   <my-header></my-header>
-  <div class="mcpage bg-accent">
+  <div class="mcpage">
     <p1 class="mc-server-text-1">Welcome to The Time Vortex Minecraft server! We are thrilled to have you as a part of
       our
       community. Our server is dedicated to providing players with a survival and creative experience like no other.
