Major Update Live Candidate 1
Fade Animation, MC Page Redone and Nav bar redone.

--- a/minecraft-server.html
+++ b/minecraft-server.html
@@ -39,69 +39,79 @@
       version of the game. Here's a step-by-step guide on how to join the server:
       <br>
       <br>
-      Java Version:
-      <br>
-      <br>
+    </p>
+
+    <p class="mc-p-title">Java Version:</p>
+    <p class="mc-server-text-2">
       1. Launch Minecraft Java Edition.
+      <br>
       <br>
       2. Click on the "Multiplayer" option from the main menu.
       <br>
+      <br>
       3. Click the "Add Server" button.
+      <br>
       <br>
       4. Give the server a name (e.g. "The Time Vortex").
       <br>
+      <br>
       5. Enter the server IP - mc.thetimevortex.xyz - into the "Server Name" field.
+      <br>
       <br>
       6. Click "Done".
       <br>
+      <br>
       7. Select the server from the server list and click "Join Server".
-      <br>
-      <br>
-      Bedrock Version:
-      <br>
-      <br>
+
+    </p>
+    <p class="mc-p-title">Bedrock Version:</p>
+    <p class="mc-server-text-2">
       1. Launch Minecraft Bedrock Edition.
+      <br>
       <br>
       2. Click on the "Play" button from the main menu.
       <br>
+      <br>
       3. Click on the "Servers" tab.
+      <br>
       <br>
       4. Click the "Add Server" button.
       <br>
       5. Give the server a name (e.g. "The Time Vortex").
       <br>
+      <br>
       6. Enter the server IP - mc.thetimevortex.xyz - into the "Server Name" field.
+      <br>
       <br>
       7. Click "Done".
       <br>
+      <br>
       8. Select the server from the server list and click "Join Server".
-      <br>
-      <br>
-      Bedrock Console Version:
-      <br>
-      <br>
+    </p>
+    <p class="mc-p-title">Bedrock Console Version:</p>
+    <p class="mc-app-link mc-server-text-2">
       1. Download the MC Server Connector app on your phone or tablet/ipad.
-      <br>
+
       Here is the <a href="https://play.google.com/store/apps/details?id=com.smokiem.mcserverconnector&gl=US"
         target="_blank">Android</a> link.
-      <br>
+
       Here is the <a href="https://apps.apple.com/us/app/mc-server-connector/id1548251304" target="_blank">IOS</a>
       link.
       <br>
+      <br>
       2. Launch the app.
+      <br>
       <br>
       3. Give the server a name (e.g. "The Time Vortex").
       <br>
+      <br>
       4. Enter the server IP - mc.thetimevortex.xyz - into the "Server Address" field.
+      <br>
       <br>
       5. Click "Start Server". The Server will be under the friends tab.
       <br>
+      <br>
       6. Select the server and Join.
-      <br>
-      <br>
-      And that's it! You should now be able to connect to The Time Vortex Minecraft server and start playing with
-      other
-      players from around the world. Get started today and experience the thrill of playing on The Time Vortex server!
     </p>
 
   </div>
