--- a/video-pages/videos-18.html
+++ b/video-pages/videos-18.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
   <title>Stream VODs</title>
   <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style-mediaquery.css">
   <script type=module src=/assets/header.js></script>
   <script type=module src=/assets/footer.js></script>
 </head>
@@ -16,7 +17,11 @@
   <my-header></my-header>
   <div class="wrapper2">
     <div class="videopage">
-      <iframe src="https://iframe.mediadelivery.net/embed/72943/322f71b2-fd10-4818-9a27-ae630d108f6d?autoplay=false&preload=false" loading="lazy" style="border: none;" allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;" allowfullscreen="true"></iframe>
+      <iframe
+        src="https://iframe.mediadelivery.net/embed/72943/322f71b2-fd10-4818-9a27-ae630d108f6d?autoplay=false&preload=false"
+        loading="lazy" style="border: none;"
+        allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+        allowfullscreen="true"></iframe>
     </div>
   </div>
   <my-footer></my-footer>
