--- a/video-pages/videos-29.html
+++ b/video-pages/videos-29.html
@@ -8,14 +8,21 @@
   <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
   <title>Stream VODs</title>
   <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style-mediaquery.css">
   <script type=module src=/assets/header.js></script>
   <script type=module src=/assets/footer.js></script>
 </head>
+
+
 <body>
   <my-header></my-header>
   <div class="wrapper2">
     <div class="videopage">
-      <iframe src="https://iframe.mediadelivery.net/embed/72943/4a32bc53-31ba-419f-abaf-a04f702b4b0d?autoplay=false&preload=false" loading="lazy" style="border: none;" allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;" allowfullscreen="true"></iframe>
+      <iframe
+        src="https://iframe.mediadelivery.net/embed/72943/4a32bc53-31ba-419f-abaf-a04f702b4b0d?autoplay=false&preload=false"
+        loading="lazy" style="border: none;"
+        allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+        allowfullscreen="true"></iframe>
     </div>
   </div>
   <my-footer></my-footer>
