--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
       height="500"></iframe>
   </div>
 
-  <audio id="bg-music" autoplay loop>
+  <audio id="bg-music" autoplay loop volume="100">
     <source src="https://music.thetimevortex.xyz/TheDoctorTTV%20Theme.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
   </audio>
 
   <script>
