--- a/minecraft-server.html
+++ b/minecraft-server.html
@@ -117,9 +117,8 @@
 
   </div>
 
-  <audio id="bg-music" autoplay loop>
+  <audio id="bg-music" autoplay loop volume="100">
     <source src="https://music.thetimevortex.xyz/TheDoctorTTV%20Theme.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
   </audio>
 
   <script>
