--- a/videos-hub.html
+++ b/videos-hub.html
@@ -74,9 +74,8 @@
                 </div>
         </div>
 
-        <audio id="bg-music" autoplay loop>
+        <audio id="bg-music" autoplay loop volume="100">
                 <source src="https://music.thetimevortex.xyz/TheDoctorTTV%20Theme.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
               </audio>
             
               <script>
