--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       height="500"></iframe>
   </div>
 
-  <audio id="bg-music" autoplay loop volume="100">
+  <audio id="bg-music" autoplay loop>
     <source src="https://music.thetimevortex.xyz/TheDoctorTTV%20Theme.mp3" type="audio/mpeg">
   </audio>
 
