--- a/videos-hub.html
+++ b/videos-hub.html
@@ -74,7 +74,7 @@
                 </div>
         </div>
 
-        <audio id="bg-music" autoplay loop volume="100">
+        <audio id="bg-music" autoplay loop>
                 <source src="https://music.thetimevortex.xyz/TheDoctorTTV%20Theme.mp3" type="audio/mpeg">
               </audio>
             
