--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
       var muteButton = document.getElementById("mute-button");
       var originalVolume = 0.2;
       audio.volume = originalVolume;
+
+      // Autoplay audio on page load
       audio.play();
 
       muteButton.addEventListener("click", function () {
@@ -60,6 +62,7 @@
       });
     });
   </script>
+
 
   <div class="img-banner"></div>
   <my-footer></my-footer>
