--- a/socials.html
+++ b/socials.html
@@ -56,6 +56,8 @@
       var muteButton = document.getElementById("mute-button");
       var originalVolume = 0.2;
       audio.volume = originalVolume;
+
+      // Autoplay audio on page load
       audio.play();
 
       muteButton.addEventListener("click", function () {
@@ -69,6 +71,8 @@
       });
     });
   </script>
+
+
 
 
   <div class="img-banner"></div>
