--- a/index.html
+++ b/index.html
@@ -23,46 +23,11 @@
   <my-header></my-header>
   <div class="wrapper index-p bg-accent">
     <p1 class="index-text">
-      Welcome to The Time Vortex, your one-stop destination for all things entertainment and gaming. We are thrilled
-      to
-      have you as a visitor to our website. Here, you can get updates on TheDoctor's YouTube channel, catch live
-      streams
-      on Twitch, stay connected with us on Twitter, join our lively community on Discord, play on our Minecraft
-      server,
-      and enjoy watching TheDoctor's Stream Vods. Whether you are a gamer, streamer, or just looking for some fun and
-      entertainment, The Time Vortex has something for everyone. So, sit back, relax, and enjoy the ride through The
-      Time Vortex! </p1>
+      The Time Vortex is an entertainment and gaming website that offers a variety of activities, including updates on TheDoctor's YouTube channel, live streams on Twitch, a community on Discord, a Minecraft server, and TheDoctor's Stream Vods, catering to gamers, streamers, and anyone looking for entertainment. </p1>
     <br>
     <iframe class="discord-widget" src="https://discord.com/widget?id=691428243877789726&theme=dark" width="350"
       height="500"></iframe>
   </div>
-
-  <audio id="bg-music" autoplay loop>
-    <source src="https://music.thetimevortex.xyz/TheDoctorTTV%20Theme.mp3" type="audio/mpeg">
-  </audio>
-
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      var audio = document.getElementById("bg-music");
-      var muteButton = document.getElementById("mute-button");
-      var originalVolume = 0.2;
-      audio.volume = originalVolume;
-
-      // Autoplay audio on page load
-      audio.play();
-
-      muteButton.addEventListener("click", function () {
-        if (audio.volume > 0) {
-          audio.volume = 0;
-          muteButton.textContent = "Unmute Music";
-        } else {
-          audio.volume = originalVolume;
-          muteButton.textContent = "Mute Music";
-        }
-      });
-    });
-  </script>
-
 
   <div class="img-banner"></div>
   <my-footer></my-footer>
