--- a/socials.html
+++ b/socials.html
@@ -15,36 +15,69 @@
   <meta property="og:url" content="https://www.thetimevortex.net" />
   <meta property="og:image"
     content="https://cdn.discordapp.com/attachments/824742183415316571/1040475479616000010/The_Time_Vortex_Logo.png" />
-  <script type=module src=assets/header.js></script>
-  <script type=module src=assets/footer.js></script>
+  <script defer src=/assets/header.js></script>
+  <script defer src=/assets/footer.js></script>
+  <script defer src=/assets/socials.js></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"
+    integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/Flip.min.js"
+    integrity="sha512-RL2ypMFkOs/iB79bWnNiFrZRCqyExtQ38n/K+t7Xjf09YZcvSzqgSaGVj+fiVYEqVRLf/WjdHmwGImZM3XO5gA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
   <my-header></my-header>
 
   <div class="socials bg-accent">
-    <p1 class="social-text">TheDoctor's Social Links.</p1>
-    <br>
-    <br>
-    <a class="cool-button" href="https://youtube.com/@thedoctorttv" target="_blank">
-      <button>Youtube Channel</button>
-    </a>
-    <br>
-    <a class="cool-button" href="https://twitch.tv/ttv_thedoctor" target="_blank">
-      <button>Twitch Channel</button>
-    </a>
-    <br>
-    <a class="cool-button" href="https://twitter.com/thedoctorttv" target="_blank">
-      <button>Twitter</button>
-    </a>
-    <a class="cool-button" href="https://github.com/TheDoctor121027" target="_blank">
-      <button>Github</button>
-    </a>
-    <a class="cool-button" href="https://vrchat.com/home/user/usr_c91b107f-da91-4366-af50-bcc3b30e9175" target="_blank">
-      <button>VRChat</button>
-    </a>
-    </p1>
+    <h1 class="social-text">TheDoctor's Social Links.</h1>
+
+    <section>
+      <div class="social-card">
+        <h1 class="social-text">Youtube</h1>
+        <p class="social-paragraph">
+          <a class="cool-button" href="https://youtube.com/@thedoctorttv" target="_blank">
+            <button class="button-text">TheDoctor's Youtube Channel</button>
+          </a>
+        </p>
+      </div>
+      <div class="social-card">
+        <h1 class="social-text">Twitch</h1>
+        <p class="social-paragraph">
+          <a class="cool-button" href="https://twitch.tv/ttv_thedoctor" target="_blank">
+            <button class="button-text">TheDoctor's Twitch Channel</button>
+          </a>
+        </p>
+      </div>
+      <div class="social-card">
+        <h1 class="social-text">Twitter</h1>
+        <p class="social-paragraph">
+          <a class="cool-button" href="https://twitter.com/thedoctorttv" target="_blank">
+            <button class="button-text">TheDoctor's Twitter</button>
+          </a>
+        </p>
+      </div>
+      <div class="social-card">
+        <h1 class="social-text">VRChat</h1>
+        <p class="social-paragraph">
+          <a class="cool-button" href="https://vrchat.com/home/user/usr_c91b107f-da91-4366-af50-bcc3b30e9175" target="_blank">
+            <button class="button-text">TheDoctor's VRChat</button>
+          </a>
+        </p>
+      </div>
+      <div class="social-card">
+        <h1 class="social-text">Github</h1>
+        <p class="social-paragraph">
+          <a class="cool-button" href="https://github.com/TheDoctor121027" target="_blank">
+            <button class="button-text">TheDoctor's GitHub</button>
+          </a>
+        </p>
+      </div>
+    </section>
+
   </div>
+
+
 
   <div class="img-banner"></div>
   <my-footer></my-footer>
