Socials Page Redesign

--- a/socials.html
+++ b/socials.html
@@ -29,8 +29,8 @@
 <body>
   <my-header></my-header>
 
-  <div class="socials bg-accent">
-    <h1 class="social-text">TheDoctor's Social Links.</h1>
+  <div class="socials">
+    <h1 class="social-text-h">TheDoctor's Social Links.</h1>
 
     <section>
       <div class="social-card">
