--- a/video-pages/videos-24.html
+++ b/video-pages/videos-24.html
@@ -2,17 +2,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
-  <title>Stream VODs</title>
-  <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="/style-mediaquery.css">
-  <script type=module src=/assets/header.js></script>
-  <script type=module src=/assets/footer.js></script>
-</head>
+  <script defer src="assets/header.js"></script>
+  <script defer src="assets/footer.js"></script>
+  <script defer src="assets/head.js"></script>
+  
+  <my-head></my-head>
 
 <body>
   <my-header></my-header>
