--- a/socials.html
+++ b/socials.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<script defer src=/assets/header.js></script>
-<script defer src=/assets/footer.js></script>
-<script defer src=/assets/socials.js></script>
-<script defer src="assets/head.js"></script>
-<script></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"
-  integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ=="
-  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/Flip.min.js"
-  integrity="sha512-RL2ypMFkOs/iB79bWnNiFrZRCqyExtQ38n/K+t7Xjf09YZcvSzqgSaGVj+fiVYEqVRLf/WjdHmwGImZM3XO5gA=="
-  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
-<my-head></my-head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/style-minify.css">
+  <link rel="stylesheet" href="/style-mediaquery-minify.css">
+  <title>TheTimeVortex</title>
+  <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="TheTimeVortex" />
+  <meta property="og:description"
+    content="TheDoctor's website which includes his discord server, youtube, twitch and more." />
+  <meta property="og:url" content="https://www.thetimevortex.net" />
+  <meta property="og:image"
+    content="https://cdn.discordapp.com/attachments/824742183415316571/1040475479616000010/The_Time_Vortex_Logo.png" />
+  <script defer src=/assets/header.js></script>
+  <script defer src=/assets/footer.js></script>
+  <script defer src=/assets/socials.js></script>
+  <script></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"
+    integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/Flip.min.js"
+    integrity="sha512-RL2ypMFkOs/iB79bWnNiFrZRCqyExtQ38n/K+t7Xjf09YZcvSzqgSaGVj+fiVYEqVRLf/WjdHmwGImZM3XO5gA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+</head>
 
 <body>
   <my-header></my-header>
