--- a/minecraft-server.html
+++ b/minecraft-server.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html5>
 <html lang="en">
 
-  <script defer src="assets/header.js"></script>
-  <script defer src="assets/footer.js"></script>
-  <script defer src="assets/head.js"></script>
-  
-  <my-head></my-head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/style-minify.css">
+  <link rel="stylesheet" href="/style-mediaquery-minify.css">
+  <title>TheTimeVortex</title>
+  <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="TheTimeVortex" />
+  <meta property="og:description"
+    content="TheDoctor's website which includes his discord server, youtube, twitch and more." />
+  <meta property="og:url" content="https://www.thetimevortex.xyz" />
+  <meta property="og:image"
+    content="https://cdn.discordapp.com/attachments/824742183415316571/1040475479616000010/The_Time_Vortex_Logo.png" />
+  <script type=module src=assets/header.js></script>
+  <script type=module src=assets/footer.js></script>
+</head>
 
 <body>
   <my-header></my-header>
   <div class="mcpage">
     <p1 class="mc-server-text-1">
-      Join The Time Vortex Minecraft server for a unique survival and creative experience with a friendly community from around the world. Use Bedrock or Java and enter the server IP - mc.thetimevortex.xyz - to start playing and unleashing your creativity and survival skills.
+      Join The Time Vortex Minecraft server for a unique survival and creative experience with a friendly community from
+      around the world. Use Bedrock or Java and enter the server IP - mc.thetimevortex.xyz - to start playing and
+      unleashing your creativity and survival skills.
     </p1>
     <p class="mc-server-text-2">
-      Follow this step-by-step guide to join The Time Vortex Minecraft server, regardless of whether you're using the Java or Bedrock version:
+      Follow this step-by-step guide to join The Time Vortex Minecraft server, regardless of whether you're using the
+      Java or Bedrock version:
       <br>
       <br>
     </p>
