--- a/video-pages/videos-24.html
+++ b/video-pages/videos-24.html
@@ -2,11 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <script defer src="assets/header.js"></script>
-  <script defer src="assets/footer.js"></script>
-  <script defer src="assets/head.js"></script>
-  
-  <my-head></my-head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
+  <title>Stream VODs</title>
+  <link rel="stylesheet" href="/style-minify.css">
+  <link rel="stylesheet" href="/style-mediaquery-minify.css">
+  <script type=module src=/assets/header.js></script>
+  <script type=module src=/assets/footer.js></script>
+</head>
 
 <body>
   <my-header></my-header>
