--- a/originalhtml/minecraft-server.html
+++ b/originalhtml/minecraft-server.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style-minify.css">
-  <link rel="stylesheet" href="/style-mediaquery-minify.css">
+  <link rel="stylesheet" href="/style-min.css">
+  <link rel="stylesheet" href="/style-mediaquery-min.css">
   <title>TheTimeVortex</title>
   <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
   <meta property="og:type" content="website">
