Video Pages CSS Fix

--- a/video-pages/videos-1.html
+++ b/video-pages/videos-1.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
   <title>Stream VODs</title>
-  <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="/style-mediaquery.css">
+  <link rel="stylesheet" href="/style-min.css">
+  <link rel="stylesheet" href="/style-mediaquery-min.css">
   <script type=module src=/assets/header.js></script>
   <script type=module src=/assets/footer.js></script>
 </head>
