--- a/videos-hub.html
+++ b/videos-hub.html
@@ -4,8 +4,8 @@
 <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/style-min.css">
-        <link rel="stylesheet" href="/style-mediaquery-min.css">
+        <link rel="stylesheet" href="/style.css">
+        <link rel="stylesheet" href="/style-mediaquery.css">
         <title>TheTimeVortex</title>
         <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
         <meta property="og:type" content="website">
