Update index.html for mobile icon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="/style-mediaquery.css">
   <title>TheTimeVortex</title>
-  <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
+  <link rel="shortcut icon" type="image/x-icon"
+ href="\icons\WebsiteLogo.ico">
+<link rel="icon" sizes="180x180" href="\icons\WebsiteLogo.ico">
+<link rel="icon" type="image/png" sizes="192x192" href="\icons\WebsiteLogo.ico">
+
   <meta property="og:type" content="website">
   <meta property="og:title" content="TheTimeVortex" />
   <meta property="og:description"
