--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="/style-mediaquery.css">
   <title>TheTimeVortex</title>
-  <link rel="shortcut icon" type="image/x-icon"
- href="\icons\WebsiteLogo.ico">
-<link rel="apple-touch-icon" sizes="180x180" href="\icons\WebsiteLogo.ico">
-<link rel="icon" type="image/png" sizes="192x192" href="\icons\WebsiteLogo.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="\icons\WebsiteLogo.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="\icons\WebsiteLogo.ico">
+  <link rel="icon" type="image/png" sizes="192x192" href="\icons\WebsiteLogo.ico">
 
   <meta property="og:type" content="website">
   <meta property="og:title" content="TheTimeVortex" />
@@ -36,6 +35,15 @@
     </p1>
     <iframe class="discord-widget" src="https://discord.com/widget?id=691428243877789726&theme=dark" width="350"
       height="500"></iframe>
+    <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+    <script>
+      kofiWidgetOverlay.draw('thedoctorttv', {
+        'type': 'floating-chat',
+        'floating-chat.donateButton.text': 'Support me',
+        'floating-chat.donateButton.background-color': '#794bc4',
+        'floating-chat.donateButton.text-color': '#fff'
+      });
+    </script>
   </div>
 
   <div class="img-banner"></div>
