--- a/minecraft-server.html
+++ b/minecraft-server.html
@@ -25,7 +25,8 @@
   <div class="mcpage">
     <p1 class="mc-server-text-1">
       Join The Time Vortex Minecraft server for a unique survival and creative experience with a friendly community from
-      around the world. Use Bedrock or Java and enter the server IP - mc.thetimevortex.xyz [1.18.2 -> Latest] - to start playing and
+      around the world. Use Bedrock or Java and enter the server IP - mc.thetimevortex.xyz [1.18.2 -> Latest] - to start
+      playing and
       unleashing your creativity and survival skills.
     </p1>
     <p class="mc-server-text-2">
@@ -33,6 +34,15 @@
       Java or Bedrock version:
       <br>
       <br>
+      <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+      <script>
+        kofiWidgetOverlay.draw('thedoctorttv', {
+          'type': 'floating-chat',
+          'floating-chat.donateButton.text': 'Support me',
+          'floating-chat.donateButton.background-color': '#794bc4',
+          'floating-chat.donateButton.text-color': '#fff'
+        });
+      </script>
     </p>
 
     <p class="mc-p-title">Java Version:</p>
