--- a/videos-hub.html
+++ b/videos-hub.html
@@ -72,6 +72,15 @@
 
                         </p1>
                 </div>
+                <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+                <script>
+                        kofiWidgetOverlay.draw('thedoctorttv', {
+                                'type': 'floating-chat',
+                                'floating-chat.donateButton.text': 'Support me',
+                                'floating-chat.donateButton.background-color': '#794bc4',
+                                'floating-chat.donateButton.text-color': '#fff'
+                        });
+                </script>
         </div>
 
         <my-footer></my-footer>
