--- a/minecraft-server.html
+++ b/minecraft-server.html
@@ -34,15 +34,8 @@
       Java or Bedrock version:
       <br>
       <br>
-      <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-      <script>
-        kofiWidgetOverlay.draw('thedoctorttv', {
-          'type': 'floating-chat',
-          'floating-chat.donateButton.text': 'Support me',
-          'floating-chat.donateButton.background-color': '#794bc4',
-          'floating-chat.donateButton.text-color': '#fff'
-        });
-      </script>
+      <a class="kofi" href="https://ko-fi.com/thedoctorttv" target="_blank"><img
+          src="https://storage.ko-fi.com/cdn/brandasset/kofi_button_blue.png" alt=""></a>
     </p>
 
     <p class="mc-p-title">Java Version:</p>
