--- a/index.html
+++ b/index.html
@@ -35,15 +35,10 @@
     </p1>
     <iframe class="discord-widget" src="https://discord.com/widget?id=691428243877789726&theme=dark" width="350"
       height="500"></iframe>
-    <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-    <script>
-      kofiWidgetOverlay.draw('thedoctorttv', {
-        'type': 'floating-chat',
-        'floating-chat.donateButton.text': 'Support me',
-        'floating-chat.donateButton.background-color': '#794bc4',
-        'floating-chat.donateButton.text-color': '#fff'
-      });
-    </script>
+
+    <a class="kofi" href="https://ko-fi.com/thedoctorttv" target="_blank"><img
+        src="https://storage.ko-fi.com/cdn/brandasset/kofi_button_blue.png" alt=""></a>
+
   </div>
 
   <div class="img-banner"></div>
