--- a/minecraft-server.html
+++ b/minecraft-server.html
@@ -25,7 +25,7 @@
   <div class="mcpage">
     <p1 class="mc-server-text-1">
       Join The Time Vortex Minecraft server for a unique survival and creative experience with a friendly community from
-      around the world. Use Bedrock or Java and enter the server IP - mc.thetimevortex.xyz [1.18.2 -> Latest] - to start
+      around the world. Use Bedrock or Java and enter the server IP - mc.thetimevortex.xyz [1.20] - to start
       playing and
       unleashing your creativity and survival skills.
     </p1>
